@@ -1,6 +1,6 @@
 
-Pyclewn allows using `vim <http://www.vim.org>`_ as a front end to a debugger.
-Pyclewn currently supports `gdb <http://www.gnu.org/software/gdb/gdb.html>`_.
+Pyclewn allows using vim_ as a front end to a debugger. Pyclewn currently
+supports gdb_.
 
 The debugger output is redirected to a vim window, the pyclewn console. The
 debugger commands are mapped to vim user-defined commands with a common letter
@@ -50,15 +50,12 @@ Features
    only supports netbeans in ``gvim``, its graphical implementation. The
    implementation of netbeans in ``plain vim`` (vim running in a terminal), is
    available as a Mercurial Queues patch for the official Vim release and for
-   the latest development source tree. See
-   `vim patches <http://pyclewn.sourceforge.net/vim-patches.html>`_.
+   the latest development source tree. See :ref:`vim-patches-label`.
 
 Comparison of clewn, vimGdb and pyclewn
 ---------------------------------------
 
-The following table lists the differences between
-`clewn <http://clewn.sourceforge.net>`_,
-`vimGdb <http://clewn.sourceforge.net>`_ and pyclewn.
+The following table lists the differences between clewn_, vimGdb_ and pyclewn.
 
     +---------------+-------------+-----------------------+------------------------+
     |               | vimGdb      | clewn                 | pyclewn                |
@@ -109,5 +106,9 @@ The following table lists the differences between
    mercurial
    vim-patches
 
+.. _vim: http://www.vim.org/
+.. _gdb: http://www.gnu.org/software/gdb/gdb.html
+.. _clewn: http://clewn.sourceforge.net
+.. _vimGdb: http://clewn.sourceforge.net
 .. vim:filetype=rst:tw=78:ts=8:et:
 
