@@ -24,7 +24,6 @@
 <h3>Links</h3>
 <ul>
     <li><a href="http://clewn.sourceforge.net">clewn</a></li>
-    <li><a href="http://dirac.org/linux/gdb/">a gdb tutorial</a></li>
 </ul>
 
 <a href="http://sourceforge.net/projects/pyclewn">
